crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/error_vs_function/generated/slang/0.8.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
   ╭─[input.sol:6:7]
   │
 6 │ error Err();
   │       ─┬─  
   │        ╰─── Error occurred here.
───╯
